Update RealmCookieHttpSessionIdResolver.java